--- a/sample/Using the il2_rest client.ipynb
+++ b/sample/Using the il2_rest client.ipynb
@@ -19,6 +19,7 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
+    "import traceback\n",
     "sys.path.append('../')\n",
     "\n",
     "from il2_rest import RestNode\n",
@@ -144,13 +145,20 @@
    "source": [
     "from il2_rest.models import KeyPermitModel\n",
     "from il2_rest.enumerations import KeyPurpose\n",
-    "key_model = KeyPermitModel(app = 4, appActions = [1000, 1001], key_id = 'Key!MJ0kidltB324mfkiOG0aBlEocPA#SHA1',\n",
-    "                   name = 'documenter', publicKey = 'PubKey!KPgQEPgItqh4hu-oJtc7pSX0jp0fYEkV_kazPxOPGxiv1YX6dbt1QNb9AFb3mYpgUE9lRsehQz9Keh80K3mxdsURZbyhACRo3ljjKKBOQY4aKIIje9yPTTnJqg0XwwyBsx1zb-qEQaWm6S5HsVvMipGSfZIhgf3R2RYOvKR8zJRr7M1h7yoPN-02wzY1wubUpmpVB6aI_wAinTfUhBxKTuOkpe6M8OhPM-W4RUC-Et22Z4SzYK9-w08PULDBl3hCD2F-0K7TnQk8j-_1K0zV9bd2v0WovdjMrWUtMmWGcJ3Z2bJpB3-0e9Q_MxVw89r1nhYnj8zVf36HV8oVBZk4axWhFbTDrxADAQAB#RSA',\n",
-    "                   purposes = [KeyPurpose.Action, KeyPurpose.Protocol])\n",
     "\n",
-    "keys = chain.permit_keys([key_model])\n",
-    "for key in keys:\n",
-    "    print(key)"
+    "node = RestNode(cert_file = 'mykeymanager.pfx', cert_pass = 'password', port = 32020)\n",
+    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain = node.chain_by_id(chain_id)\n",
+    "\n",
+    "try :\n",
+    "    key_model = KeyPermitModel(app = 4, appActions = [1000, 1001], key_id = 'Key!MJ0kidltB324mfkiOG0aBlEocPA#SHA1',\n",
+    "                       name = 'documenter', publicKey = 'PubKey!KPgQEPgItqh4hu-oJtc7pSX0jp0fYEkV_kazPxOPGxiv1YX6dbt1QNb9AFb3mYpgUE9lRsehQz9Keh80K3mxdsURZbyhACRo3ljjKKBOQY4aKIIje9yPTTnJqg0XwwyBsx1zb-qEQaWm6S5HsVvMipGSfZIhgf3R2RYOvKR8zJRr7M1h7yoPN-02wzY1wubUpmpVB6aI_wAinTfUhBxKTuOkpe6M8OhPM-W4RUC-Et22Z4SzYK9-w08PULDBl3hCD2F-0K7TnQk8j-_1K0zV9bd2v0WovdjMrWUtMmWGcJ3Z2bJpB3-0e9Q_MxVw89r1nhYnj8zVf36HV8oVBZk4axWhFbTDrxADAQAB#RSA',\n",
+    "                       purposes = [KeyPurpose.Action, KeyPurpose.Protocol])\n",
+    "    keys = chain.permit_keys([key_model])\n",
+    "    for key in keys:\n",
+    "        print(key)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n"
    ]
   },
   {
@@ -166,8 +174,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apps = chain.permit_apps([4])\n",
-    "print(apps)"
+    "node = RestNode(cert_file = 'recorder.pfx', cert_pass = 'password', port = 32020)\n",
+    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain = node.chain_by_id(chain_id)\n",
+    "\n",
+    "try :\n",
+    "    apps = chain.permit_apps([4])\n",
+    "    print(apps)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n"
    ]
   },
   {
@@ -188,16 +203,29 @@
     "from il2_rest.models import NewRecordModelAsJson\n",
     "from il2_rest.models import NewRecordModel\n",
     "\n",
-    "model_json = NewRecordModelAsJson(applicationId = 1, payloadTagId = 300, rec_json= {'tagId': 300,'version' : 0, 'apps': [4]})\n",
-    "record_json = chain.add_record_as_json(model = model_json)\n",
-    "print(record_json)\n",
+    "node = RestNode(cert_file = 'recorder.pfx', cert_pass = 'password', port = 32020)\n",
+    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain = node.chain_by_id(chain_id)\n",
     "\n",
-    "model_bytes = NewRecordModel(applicationId = 1, payloadTagId = 300, payloadBytes = bytes([248, 52, 7, 5, 0, 0, 20, 2, 1, 4]))\n",
-    "record_bytes = chain.add_record(model_bytes)\n",
-    "print(record_bytes)\n",
+    "try :\n",
+    "    model_json = NewRecordModelAsJson(applicationId = 1, payloadTagId = 300, rec_json= {'tagId': 300,'version' : 1, 'apps': [4]})\n",
+    "    record_json = chain.add_record_as_json(model = model_json)\n",
+    "    print(record_json)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n",
     "\n",
-    "record_unpacked = chain.add_record_unpacked(applicationId = 1, payloadTagId = 300, rec_bytes = bytes([5, 0, 0, 20, 2, 1, 4]))\n",
-    "print(record_unpacked)"
+    "try :\n",
+    "    model_bytes = NewRecordModel(applicationId = 1, payloadTagId = 300, payloadBytes = bytes([248, 52, 7, 5, 0, 0, 20, 2, 1, 4]))\n",
+    "    record_bytes = chain.add_record(model_bytes)\n",
+    "    print(record_bytes)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n",
+    "\n",
+    "try :\n",
+    "    record_unpacked = chain.add_record_unpacked(applicationId = 1, payloadTagId = 300, rec_bytes = bytes([5, 0, 0, 20, 2, 1, 4]))\n",
+    "    print(record_unpacked)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n"
    ]
   },
   {
@@ -217,18 +245,34 @@
    "source": [
     "from il2_rest.models import DocumentUploadModel\n",
     "\n",
-    "doc_resp = chain.store_document_from_text(content = 'Plain text', name = 'text_file.txt')\n",
-    "print(doc_resp)\n",
+    "node = RestNode(cert_file = 'documenter.pfx', cert_pass = 'password', port = 32020)\n",
+    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain = node.chain_by_id(chain_id)\n",
     "\n",
-    "doc_bytes = chain.store_document_from_bytes(doc_bytes = b'Bytes message!', name = 'bytes_file.txt', content_type = 'plain/text')\n",
-    "print(doc_bytes)\n",
+    "try :\n",
+    "    doc_resp = chain.store_document_from_text(content = 'Plain text', name = 'text_file.txt')\n",
+    "    print(doc_resp)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n",
     "\n",
-    "doc_model = DocumentUploadModel(name = 'other_bytes_file.txt', contentType = 'plain/text')\n",
-    "new_document = chain.store_document_from_bytes(doc_bytes = b'Other bytes message!', model = doc_model)\n",
-    "print(new_document)\n",
+    "try :\n",
+    "    doc_bytes = chain.store_document_from_bytes(doc_bytes = b'Bytes message!', name = 'bytes_file.txt', content_type = 'plain/text')\n",
+    "    print(doc_bytes)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n",
     "\n",
-    "doc_file = chain.store_document_from_file(file_path = './test.pdf', content_type = 'application/pdf')\n",
-    "print(doc_file)"
+    "try :\n",
+    "    doc_model = DocumentUploadModel(name = 'other_bytes_file.txt', contentType = 'plain/text')\n",
+    "    new_document = chain.store_document_from_bytes(doc_bytes = b'Other bytes message!', model = doc_model)\n",
+    "    print(new_document)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n",
+    "\n",
+    "try :\n",
+    "    doc_file = chain.store_document_from_file(file_path = './test.pdf', content_type = 'application/pdf')\n",
+    "    print(doc_file)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n"
    ]
   },
   {
@@ -247,6 +291,11 @@
    "outputs": [],
    "source": [
     "from il2_rest.models import ForceInterlockModel\n",
+    "\n",
+    "node = RestNode(cert_file = 'interlocker.pfx', cert_pass = 'password', port = 32020)\n",
+    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain = node.chain_by_id(chain_id)\n",
+    "\n",
     "\n",
     "for interlock in chain.interlocks :\n",
     "    print(interlock)\n",
