Added an example of chain creation in hte sample notebook.

--- a/sample/Using the il2_rest client.ipynb
+++ b/sample/Using the il2_rest client.ipynb
@@ -89,11 +89,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "print(chain.active_apps)\n",
@@ -130,6 +130,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Creating a Chain\n",
+    "\n",
+    "If your are using a certificate with administration privileges, it is possible to create new chains."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from il2_rest.models import ChainCreationModel\n",
+    "\n",
+    "node = RestNode(cert_file = 'recorder.pfx', cert_pass = 'password', port = 32020)\n",
+    "\n",
+    "new_chain = ChainCreationModel(\n",
+    "    name = 'IL2App Chain',\n",
+    "    description = 'Chain to store person enrollments',\n",
+    "    managementKeyPassword = 'management_password',\n",
+    "    emergencyClosingKeyPassword = 'closing_password'\n",
+    ")\n",
+    "\n",
+    "created_chain = node.create_chain(model=new_chain)\n",
+    "print(created_chain)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Managing Keys and Apps\n",
     "\n",
     "If your are using a certificate allowed to permit key, you can permit other keys in the chain. The `permit_keys` method will return the list of permitted keys in the chain.\n",
@@ -147,7 +177,7 @@
     "from il2_rest.enumerations import KeyPurpose\n",
     "\n",
     "node = RestNode(cert_file = 'mykeymanager.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
@@ -175,7 +205,7 @@
    "outputs": [],
    "source": [
     "node = RestNode(cert_file = 'recorder.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
@@ -204,7 +234,7 @@
     "from il2_rest.models import NewRecordModel\n",
     "\n",
     "node = RestNode(cert_file = 'recorder.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
@@ -246,7 +276,7 @@
     "from il2_rest.models import DocumentUploadModel\n",
     "\n",
     "node = RestNode(cert_file = 'documenter.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
+    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
