Added an example storing JSON record in the Jupyter notebook.

--- a/sample/Using the il2_rest client.ipynb
+++ b/sample/Using the il2_rest client.ipynb
@@ -233,8 +233,8 @@
     "from il2_rest.models import NewRecordModelAsJson\n",
     "from il2_rest.models import NewRecordModel\n",
     "\n",
-    "node = RestNode(cert_file = 'recorder.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
+    "node = RestNode(cert_file = 'tillitasset.pfx', cert_pass = 'password', port = 32020)\n",
+    "chain_id = '4q9tPpRaKkMsFQAsyr_yTzL3NdPnylsGmdmyF_iMmvQ'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
@@ -275,8 +275,8 @@
    "source": [
     "from il2_rest.models import DocumentUploadModel\n",
     "\n",
-    "node = RestNode(cert_file = 'documenter.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
+    "node = RestNode(cert_file = 'tillitasset.pfx', cert_pass = 'password', port = 32020)\n",
+    "chain_id = '4q9tPpRaKkMsFQAsyr_yTzL3NdPnylsGmdmyF_iMmvQ'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
@@ -309,6 +309,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Storing JSON Documents\n",
+    "\n",
+    "If you wish to store a generic JSON data, you can use the following script to store in a JSON document record:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node = RestNode(cert_file = 'documenter.pfx', cert_pass = 'password', port = 32020)\n",
+    "chain_id = '4q9tPpRaKkMsFQAsyr_yTzL3NdPnylsGmdmyF_iMmvQ'\n",
+    "chain = node.chain_by_id(chain_id)\n",
+    "\n",
+    "json_data = {\n",
+    "    \"field1\" : 1,\n",
+    "    \"field2\" : \"Test\",\n",
+    "    \"field3\": [1,2,3],\n",
+    "    \"field4\" : {\n",
+    "        \"value1\" : 10,\n",
+    "        \"value2\" : 20\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "resp = chain.store_json_document(json_data)\n",
+    "print(resp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Interlockings\n",
     "\n",
     "It is also possible to check or force interlocks using the API."
@@ -334,13 +367,6 @@
     "interlock_model = chain.force_interlock(model = force_model)\n",
     "print(interlock_model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
