Updating documentation and example.

--- a/sample/Using the il2_rest client.ipynb
+++ b/sample/Using the il2_rest client.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node = RestNode(cert_file = 'documenter.pfx', cert_pass = 'password', port = 32020)\n",
+    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
     "print(node.details)"
    ]
   },
@@ -93,7 +93,7 @@
    },
    "outputs": [],
    "source": [
-    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
+    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "print(chain.active_apps)\n",
@@ -122,7 +122,7 @@
     "for document in chain.documents :\n",
     "    print(document)\n",
     "\n",
-    "document_bytes = chain.document_as_raw(fileId='WGWY2Xm-dTaLyu1IxZHv5WJBJFDI1lR5sBXMUVxyNwI#SHA256')\n",
+    "document_bytes = chain.document_as_raw(fileId='GF-NsyJx_iX1Yab8k4suJkMG7DBO2lGAB9F2SCY4GWk#SHA256')\n",
     "print(document_bytes)"
    ]
   },
@@ -143,7 +143,7 @@
    "source": [
     "from il2_rest.models import ChainCreationModel\n",
     "\n",
-    "node = RestNode(cert_file = 'recorder.pfx', cert_pass = 'password', port = 32020)\n",
+    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
     "\n",
     "new_chain = ChainCreationModel(\n",
     "    name = 'IL2App Chain',\n",
@@ -176,8 +176,8 @@
     "from il2_rest.models import KeyPermitModel\n",
     "from il2_rest.enumerations import KeyPurpose\n",
     "\n",
-    "node = RestNode(cert_file = 'mykeymanager.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
+    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
+    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
@@ -204,8 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node = RestNode(cert_file = 'recorder.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = 'gLWoars-ECDtxghPSZzZYYABpITXoKIY3awjSu5ybtw'\n",
+    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
+    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
@@ -221,7 +221,7 @@
    "source": [
     "## Storing Records\n",
     "\n",
-    "It is possible to store documents using the model classes or using the unpacked method."
+    "It is possible to store records using the model classes or using the unpacked method."
    ]
   },
   {
@@ -233,8 +233,8 @@
     "from il2_rest.models import NewRecordModelAsJson\n",
     "from il2_rest.models import NewRecordModel\n",
     "\n",
-    "node = RestNode(cert_file = 'tillitasset.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = '4q9tPpRaKkMsFQAsyr_yTzL3NdPnylsGmdmyF_iMmvQ'\n",
+    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
+    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
@@ -262,9 +262,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Storing documents\n",
+    "## Storing Documents\n",
     "\n",
-    "There are three ways to store a document: plain text, bytes or file. To store a text document you can use the following script:\n"
+    "You can store a series of documents in a single record using the documents API. To do so, you need to start a transaction, then you upload the documents and finally commit the transaction.\n",
+    "\n",
+    "> Whe you commit the documents, you will receive the locator of the documents, remember to store this locator in your system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from il2_rest.models import DocumentsBeginTransactionModel\n",
+    "from il2_rest.models import DocumentsTransactionModel\n",
+    "\n",
+    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
+    "\n",
+    "print(str(node.documents_config))\n",
+    "\n",
+    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
+    "chain = node.chain_by_id(chain_id)\n",
+    "\n",
+    "# Using a DocumentsBeginTransactionModel\n",
+    "try :\n",
+    "    model = DocumentsBeginTransactionModel(chain = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI', \n",
+    "                                           comment ='Using model')\n",
+    "    resp = chain.documents_begin_transaction(model = model)\n",
+    "    transaction_id = resp.transactionId\n",
+    "   \n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item1.txt\", \"text/plain\", \"./test.txt\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"text/plain\", \"./test2.txt\", \"This file has a comment.\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item3.pdf\", \"application/pdf\", \"../InterlockLedgerAPI.pdf\", \"PDF file.\"))\n",
+    "    \n",
+    "       \n",
+    "    print(chain.documents_transaction_status(transaction_id))\n",
+    "    \n",
+    "    locator = chain.documents_transaction_commit(transaction_id)\n",
+    "    print(locator)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n",
+    "\n",
+    "# Passing parameters to the documents_begin_transaction method\n",
+    "try :\n",
+    "    resp = chain.documents_begin_transaction(comment ='Using parameters')\n",
+    "    transaction_id = resp.transactionId\n",
+    "   \n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item1.txt\", \"text/plain\", \"./test.txt\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"text/plain\", \"./test2.txt\", \"This file has a comment.\"))\n",
+    "       \n",
+    "    print(chain.documents_transaction_status(transaction_id))\n",
+    "    \n",
+    "    locator = chain.documents_transaction_commit(transaction_id)\n",
+    "    print(locator)\n",
+    "except :\n",
+    "    print(traceback.format_exc())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get information about a multi-document record, you will need to use the locator id. \n",
+    "With the locator id you can check the metadata of a multi-document. \n",
+    "Or you can download the files stored in the record.\n",
+    "It is possible to download a single file (indicating the file with its index), or download all files in a compressed file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
+    "\n",
+    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
+    "chain = node.chain_by_id(chain_id)\n",
+    "\n",
+    "locator = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRIe'\n",
+    "resp = chain.documents_transaction_metadata(locator)\n",
+    "print(resp)\n",
+    "\n",
+    "# Download a single file\n",
+    "chain.download_single_document_at(locator, 2)\n",
+    "\n",
+    "# Download a compressed file with all files in the record\n",
+    "chain.download_documents_as_zip(locator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ~~Storing documents~~\n",
+    "\n",
+    "~~There are three ways to store a document: plain text, bytes or file. To store a text document you can use the following script:~~\n",
+    "\n",
+    "> DEPRECATED\n"
    ]
   },
   {
@@ -275,34 +371,36 @@
    "source": [
     "from il2_rest.models import DocumentUploadModel\n",
     "\n",
-    "node = RestNode(cert_file = 'tillitasset.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = '4q9tPpRaKkMsFQAsyr_yTzL3NdPnylsGmdmyF_iMmvQ'\n",
+    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
+    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
-    "    doc_resp = chain.store_document_from_text(content = 'Plain text', name = 'text_file.txt')\n",
+    "    doc_resp = chain.store_document_from_text(content = 'Plain text', name = 'elo_file.txt')\n",
     "    print(doc_resp)\n",
     "except :\n",
     "    print(traceback.format_exc())\n",
     "\n",
+    "\n",
     "try :\n",
-    "    doc_bytes = chain.store_document_from_bytes(doc_bytes = b'Bytes message!', name = 'bytes_file.txt', content_type = 'plain/text')\n",
+    "    doc_bytes = chain.store_document_from_bytes(doc_bytes = b'Bytes message!', name = 'bytes_file.txt', content_type = 'text/plain')\n",
     "    print(doc_bytes)\n",
     "except :\n",
     "    print(traceback.format_exc())\n",
     "\n",
     "try :\n",
-    "    doc_model = DocumentUploadModel(name = 'other_bytes_file.txt', contentType = 'plain/text')\n",
+    "    doc_model = DocumentUploadModel(name = 'other_bytes_file.txt', contentType = 'text/plain')\n",
     "    new_document = chain.store_document_from_bytes(doc_bytes = b'Other bytes message!', model = doc_model)\n",
     "    print(new_document)\n",
     "except :\n",
     "    print(traceback.format_exc())\n",
     "\n",
+    "\n",
     "try :\n",
-    "    doc_file = chain.store_document_from_file(file_path = './test.pdf', content_type = 'application/pdf')\n",
+    "    doc_file = chain.store_document_from_file(file_path = './test.txt', content_type = 'text/plain')\n",
     "    print(doc_file)\n",
     "except :\n",
-    "    print(traceback.format_exc())\n"
+    "    print(traceback.format_exc())"
    ]
   },
   {
@@ -320,8 +418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node = RestNode(cert_file = 'documenter.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = '4q9tPpRaKkMsFQAsyr_yTzL3NdPnylsGmdmyF_iMmvQ'\n",
+    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
+    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "json_data = {\n",
