Updated sample notebook.

--- a/sample/Using the il2_rest client.ipynb
+++ b/sample/Using the il2_rest client.ipynb
@@ -282,19 +282,21 @@
     "\n",
     "print(str(node.documents_config))\n",
     "\n",
-    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
+    "chain_id = '2hwzyZ6q08LDKxiN440ZKTxDLfSntAJcLjFuAKVGDN4'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "# Using a DocumentsBeginTransactionModel\n",
     "try :\n",
-    "    model = DocumentsBeginTransactionModel(chain = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI', \n",
-    "                                           comment ='Using model')\n",
+    "    model = DocumentsBeginTransactionModel(chain = '2hwzyZ6q08LDKxiN440ZKTxDLfSntAJcLjFuAKVGDN4', \n",
+    "                                           comment ='Using model',\n",
+    "                                           encryption = 'PBKDF2-SHA256-AES128-HIGH',\n",
+    "                                           password = 'qwerty123456')\n",
     "    resp = chain.documents_begin_transaction(model = model)\n",
     "    transaction_id = resp.transactionId\n",
     "   \n",
-    "    print(chain.documents_transaction_add_item(transaction_id, \"item1.txt\", \"text/plain\", \"./test.txt\"))\n",
-    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"text/plain\", \"./test2.txt\", \"This file has a comment.\"))\n",
-    "    print(chain.documents_transaction_add_item(transaction_id, \"item3.pdf\", \"application/pdf\", \"../InterlockLedgerAPI.pdf\", \"PDF file.\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item1.txt\", \"./test.txt\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"./test2.txt\", comment = \"This file has a comment.\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item3.pdf\", \"../InterlockLedgerAPI.pdf\", comment = \"PDF file.\"))\n",
     "    \n",
     "       \n",
     "    print(chain.documents_transaction_status(transaction_id))\n",
@@ -309,15 +311,15 @@
     "    resp = chain.documents_begin_transaction(comment ='Using parameters')\n",
     "    transaction_id = resp.transactionId\n",
     "   \n",
-    "    print(chain.documents_transaction_add_item(transaction_id, \"item1.txt\", \"text/plain\", \"./test.txt\"))\n",
-    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"text/plain\", \"./test2.txt\", \"This file has a comment.\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item1.txt\", \"./test.txt\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"./test2.txt\", comment = \"This file has a comment.\"))\n",
     "       \n",
     "    print(chain.documents_transaction_status(transaction_id))\n",
     "    \n",
-    "    locator = chain.documents_transaction_commit(transaction_id)\n",
+    "    #locator = chain.documents_transaction_commit(transaction_id)\n",
     "    print(locator)\n",
     "except :\n",
-    "    print(traceback.format_exc())"
+    "    print(traceback.format_exc())\n"
    ]
   },
   {
